# bsim

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: BUILD.bazel  bit_vector.cpp  bit_vector.h  dynamic_bit_vector.h  quad_value_bit_vector.h  static_quad_value_bit_vector.h
test/: BUILD.bazel  bitvector_tests.cpp  dynamic_bitvector_tests.cpp  quad_value_bv_tests.cpp  static_quad_value_bv_tests.cpp
